--- a/src/sass/components/_pagination-2.sass
+++ b/src/sass/components/_pagination-2.sass
@@ -41,10 +41,10 @@ $pagination-font-size: 16px
 		svg
 			+display-inline-block-middle
 			+size(10px)
-			fill: inherit
+			fill: currentColor
 
 		path
-			fill: inherit
+			fill: currentColor
 			transition: inherit
 
 		.no-touchevents &:hover
