--- a/src/sass/components/_search-form.sass
+++ b/src/sass/components/_search-form.sass
@@ -138,7 +138,7 @@ input.search-form__input
 			margin: -#{round($search-form-popup-btn-size--sm*0.5)} 0 0 -#{round($search-form-popup-btn-size--sm*0.5)}
 
 	path
-		fill: inherit
+		fill: currentColor
 		transition: inherit
 
 	span
