--- a/src/sass/pages/_catalog.sass
+++ b/src/sass/pages/_catalog.sass
@@ -322,7 +322,7 @@ $c-section-max-width-lg: 1320px !default
 			margin: 0 15px 0 0
 
 	path
-		fill: inherit
+		fill: currentColor
 
 	.arr
 		position: absolute
