--- a/src/sass/components/_pagination.sass
+++ b/src/sass/components/_pagination.sass
@@ -77,10 +77,10 @@ $pagination-font-size: 16px
 	svg
 		+display-inline-block-middle
 		+size(12px)
-		fill: inherit
+		fill: currentColor
 
 	path
-		fill: inherit
+		fill: currentColor
 		transition: inherit
 
 	.no-touchevents &:hover
