--- a/src/sass/partials/_header.sass
+++ b/src/sass/partials/_header.sass
@@ -312,3 +312,49 @@
 		opacity: 0
 
 /*HEADER end*/
+
+/* price-down
+.price-down
+	display: block
+	position: absolute
+	left: 0
+	bottom: 20px
+	width: 80px
+	height: 80px
+	padding-top: 45px
+	+font-alt-bold
+	+font(10px, 12px)
+	letter-spacing: 0.05em
+	text-align: center
+	color: #676767
+	text-transform: uppercase
+	text-decoration: none
+	transition: color $animation-speed
+
+	svg
+		display: block
+		position: absolute
+		left: 50%
+		top: 13px
+		margin-left: -12px
+		+size(24px)
+
+	path, polygon
+		fill: $base-color
+
+		.ea-site &
+			fill: $base-color--ea
+
+	&:hover
+		color: $base-color
+
+	.ea-site &:hover
+		color: $base-color--ea
+
+	.shutter-footer &
+		position: relative
+		left: auto
+		bottom: auto
+		margin: 0 auto
+
+/* price-down end
